--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -536,5 +536,12 @@
       "address": "Электронная почта"
     },
     "noData": "Нет данных"
+  },
+  "titleBlock": {
+    "enterData": "Ввести данные",
+    "needHelp": "Нужна помощь с подбором оборудования?",
+    "productName": "ПРЕСС\nГРАНУЛЯТОР",
+    "productDescription": "ДЛЯ ГРАНУЛИРОВАНИЯ БИОМАССЫ, RDF, \nКОМБИКОРМОВ И ПИЩЕВОЙ ПРОДУКЦИИ",
+    "countPrice": "ЗАПРОСИТЬ СТОИМОСТЬ"
   }
 } 
