change about page

--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -256,7 +256,7 @@
       "title": "О компании",
       "description": "Кто мы",
       "descriptionBg": "О компании",
-      "text": "«GOLDEN DIE» является брендом компании LKT Group GmbH, который поставляет на рынок технические запчасти для промышленного оборудования, в частности матрицы, обечайки, ролики для пресс-гранулятора любого типа, эксцентриковые валы, а также молотки, оси и сито для молотковой дробилки и сепараторов. Производство поддерживает любые запасные части в маленьких и больших объемах по чертежам, имеющимся в базе компании LKT Group GmbH, а также эксклюзивно по чертежам предоставленными клиентами компании.\n\nКаждая единица, выпущенная под брендом «GOLDEN DIE» проходит обработку на оборудовании, сертифицированном CE - что гарантирует качество и соответствие обработки изделия."
+      "text": "«GOLDEN DIE» является брендом компании «LKT GROUP», который поставляет на рынок технические запчасти для производственного оборудования (матрицы для грануляторов, обечайки и т п).\n\nНа текущем этапе планируется размещение только матриц для грануляторов, стоит учесть, что ассортимент компании будет расширяться и для этого необходимо подготовить сопутствующий функционал на ресурсе."
     },
     "history": {
       "title": "История компании",
@@ -265,7 +265,7 @@
       "timeLine": {
         "ready": "Выполнено",
         "awaiting": "Ожидается",
-        "lktGroup": "Подразделение компании LKT WERKE",
+        "lktGroup": "Основание компании LKT Group GmbH",
         "goldenDie": "Внедрение бренда GOLDENDIE",
         "goldenMill": "Внедрение бренда GOLDENMILL"
       }
