changed the paths to the granulator section

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -540,8 +540,8 @@
   "titleBlock": {
     "enterData": "Ввести данные",
     "needHelp": "Нужна помощь с подбором оборудования?",
-    "productName": "ПРЕСС\nГРАНУЛЯТОР",
-    "productDescription": "ДЛЯ ГРАНУЛИРОВАНИЯ БИОМАССЫ, RDF, \nКОМБИКОРМОВ И ПИЩЕВОЙ ПРОДУКЦИИ",
-    "countPrice": "ЗАПРОСИТЬ СТОИМОСТЬ"
+    "productName": "Пресс\nгранулятор",
+    "productDescription": "Для гранулирования биомассы, RDF, \nкомбикормов и пищевой продукции",
+    "countPrice": "Запросить стоимость"
   }
 } 
