change colors and content on About and Contacts

--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -266,8 +266,8 @@
         "ready": "Выполнено",
         "awaiting": "Ожидается",
         "lktGroup": "Основание компании LKT Group GmbH",
-        "goldenDie": "Внедрение бренда GOLDENDIE",
-        "goldenMill": "Внедрение бренда GOLDENMILL"
+        "goldenDie": "Внедрение бренда Golden Die",
+        "goldenMill": "Внедрение бренда Golden Mill"
       }
     }
   },
