--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -38,8 +38,8 @@
       "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, матрицы, обечайки, запасные части, грануляторы, промышленное оборудование, высокое качество, индивидуальное изготовление, износостойкость, производство гранул, грануляция, экструзия"
     }
   },
-  "dieMatrix": "Пресс",
-  "granulator": "Гранулятор",
+  "firstTitle": "Пресс",
+  "secondTitle": "Гранулятор",
   "rollerShell": "Обечайка",
   "navBar": {
     "main": "Главная страница",
@@ -58,10 +58,6 @@
   },
   "titleBlock": {
     "needHelp": "Нужна помощь с подбором оборудования?",
-    "productName": {
-      "first": "ПРЕСС",
-      "second": "ГРАНУЛЯТОР"
-    },
     "productDescription": "Для гранулирования биомассы, rdf, \nкомбикормов и пищевой продукции",
     "countPrice": "Запросить стоимость"
   },
@@ -129,10 +125,10 @@
       "wrongFormat": "Неверный формат"
     }
   },
-  "matrixTypes": {
-    "flatDie": "GM420 — GM520",
-    "ringDie": "GM650",
-    "twinTrack": "GM850"
+  "granulatorTypes": {
+    "GM420 — GM520": "GM420 — GM520",
+    "GM650": "GM650",
+    "GM850": "GM850"
   },
   "rollerShellTypes": {
     "forFlatDie": "Под плоский тип",
@@ -140,115 +136,84 @@
     "forTwinTrack": "Под Twin-Track"
   },
   "diagrams": {
-    "dieMatrix": {
-      "highHardness": {
+    "millGranulator": {
+      "mainFeatures": {
         "title": {
-          "first": "Модель gm",
-          "second": "Характеристики"
+          "model": "Модель gm",
+          "features": "Характеристики"
         },
-        "description": "Высококачественные\nпеллет",
+        "subtitle": "Высококачественные пеллет",
         "descriptionBg": "Характеристики",
-        "diagramName": "График зависимости",
-        "diagramX": "Рабочая температура (°С)"
+        "features": {
+          "1": "Усиленный корпус пресс-гранулятора GM обеспечивает максимальную стабильность и надежность даже в самых тяжелых условиях.",
+          "2": "Пневматический клапан перегрузки и система безопасности в виде срезного болта обеспечивают безопасную работу пресс-гранулятора GM даже при непредвиденных ситуациях.",
+          "3": "Клиноременная передача пресс-гранулятора GM не только проста в обслуживании, но и снижает эксплуатационные расходы, делая ваши инвестиции еще более прибыльными.",
+          "4": "Ротор и главный вал пресс-гранулятора GM специально разработаны для материалов высокой плотности и могут выдерживать высокие нагрузки.",
+          "5": "Пресс-гранулятор GM, оснащенный двигателем стандарта IE4, обеспечивает высокий уровень эффективности, экономит энергию и защищает окружающую среду."
+        }
       },
-      "comparisons": {
+      "temperatureBlock": {
         "title": {
-          "first": "Эффективное",
-          "second": "Охлаждение",
-          "third": "Роликов"
+          "efficient": "Эффективное",
+          "cooling": "Охлаждение",
+          "rollers": "Роликов"
         },
-        "description": {
-          "first": "Низкая температура"
-        },
+        "subtitle": "Низкая температура",
         "descriptionBg": "Охлаждение",
-        "diagramName": "Вид матрицы в разрезе",
-        "diagramArrow": "До 10% меньше износа",
-        "diagramDesignation": "Конкуренты"
+        "working": "Рабочая температура",
+        "shellAverage": "Средняя температура обечайки",
+        "bearingAverage": "Средняя температура подшипника"
       },
-      "technicalData": {
-        "title": "Техническая",
-        "description": "Спецификация",
-        "descriptionBg": "Спецификация",
-        "diagramName": "Таблица характеристик",
-        "column": {
-          "first": {
-            "drilling": "Сверление",
-            "metal": "Металл",
-            "hardening": "Закалка"
-          },
-          "second": {
-            "holes": "Отверстия",
-            "counterSink": "Зенковка",
-            "counterDrill": "Противосверление",
-            "alloyType": "Тип сплава",
-            "vacuum": "Вакуумная"
-          },
-          "third": {
-            "holesValue": "1,8 - 25 мм",
-            "counterSinkValue": "15° - 60°",
-            "counterDrillValue": "Коническое / Цилиндрическое /    1-, 2-, 3-ступенчатая",
-            "alloyTypeValue": "Хромистая сталь",
-            "vacuumValue": "52-55 HRC"
-          }
-        }
-      }
-    },
-    "rollerShell": {
-      "surfaceTypes": {
+      "vibrationBlock": {
         "title": {
-          "first": "Тип",
-          "second": "поверхностей"
+          "sensor": "Датчики вибрации",
+          "option": "(ОПЦИЯ)"
         },
-        "description": "На ваш выбор",
-        "descriptionBg": "Поверхность",
-        "surfaceTypes": {
-          "perforated": "Перфорированная",
-          "ribbedClosed": "Рифленая (закрытая)",
-          "ribbedOpen": "Рифленая (открытая)",
-          "slantGrooved": "Косо-рифленая",
-          "fishBone": "Рыбья кость",
-          "arc": "Дуга"
+        "subtitle": "Умная система раннего обнаружения",
+        "descriptionBg": "Опция",
+        "frequency": "Частота (Hz)",
+        "period": "Период (t)",
+        "sensor1": "Датчик 1",
+        "sensor2": "Датчик 2",
+        "notification": "преждевременное оповещение о возможных поломках при повышенной вибрации"
+      },
+      "safetyBlock": {
+        "title": {
+          "system": "Система",
+          "security": "Безопасности"
+        },
+        "subtitle": "При перегрузке",
+        "descriptionBg": "Безопасность",
+        "safety": {
+          "bolt": "cрез срезного болта при перегрузке",
+          "emergency": "концевик для аварийной остановки пресса"
         }
       },
-      "comparisons": {
+      "sensorsBlock": {
         "title": {
-          "first": "Сравнение с",
-          "second": "конкурентами"
+          "sensors": "Датчики и модули",
+          "model": "с IO-Link"
         },
-        "description": {
-          "first": "До 7% меньше износа",
-          "second": "поверхности"
-        },
-        "descriptionBg": "Преимущество",
-        "diagramName": "Вид обечайки в разрезе",
-        "diagramArrow": "До 7% меньше износа",
-        "diagramDesignation": "Конкуренты"
+        "subtitle": "Автоматизация с минимальным количеством кабеля и дистанционным управлением",
+        "descriptionBg": "Автоматизация"
       },
-      "technicalData": {
-        "title": "Техническая",
-        "description": "Спецификация",
+      "specificationBlock": {
+        "title": {
+          "dataSheet": "Техническая"
+        },
+        "subtitle": "Спецификация",
         "descriptionBg": "Спецификация",
-        "diagramName": "Таблица характеристик",
-        "column": {
-          "first": {
-            "surface": "Поверхность",
-            "metal": "Металл",
-            "hardening": "Закалка"
-          },
-          "second": {
-            "perforation": "Перфорация",
-            "corrugation": "Рифление",
-            "gradient": "Уклон",
-            "alloyType": "Тип сплава",
-            "induction": "Индукционная"
-          },
-          "third": {
-            "perforationValue": "6/7,5 - 8/12 мм",
-            "corrugationValue": "M1 - M10",
-            "gradientValue": "0 - 40°",
-            "alloyTypeValue": "100Cr6/20MnCr5",
-            "inductionValue": "58-62 HRC"
-          }
+        "characteristics": {
+          "title": "Таблица характеристик",
+          "biomassOutput": "Производительность – биомасса (т/ч)*¹",
+          "feedOutput": "Производительность – корма (т/ч)*¹",
+          "nominalEnginePower": "Номинальная мощность двигателя (кВт)",
+          "pressSpeed": "Скорость пресса (об/мин)",
+          "mixerPower": "Номинальная мощность смесителя (кВт)",
+          "dimensions": "Габариты (мм)*² (ДxШxВ)",
+          "weight": "Вес (т)*²",
+          "note1": "* Расчет основан на тестовых значениях с матрицей ⌀ 6/8 мм. Производительность может варьироваться в зависимости от типа сырья, подготовки материала и технических характеристик матрицы.",
+          "note2": "* Информация без смесителя."
         }
       }
     }
