in granulator two themes ready, refactored theme switching functional

--- a/src/components/translation/de.json
+++ b/src/components/translation/de.json
@@ -38,6 +38,7 @@
       "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, Matrizen, Kollerhülsen, Ersatzteile, Pelletpressen, Industrieanlagen, hohe Qualität, individuelle Fertigung, Verschleißfestigkeit, Pelletproduktion, Granulierung, Extrusion"
     }
   },
+  "granulator": "Pellet",
   "firstTitle": "Pellet",
   "secondTitle": "Presse",
   "rollerShell": "Kollerhülse",
