--- a/src/components/translation/en.json
+++ b/src/components/translation/en.json
@@ -38,6 +38,7 @@
       "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, dies, roller shells, spare parts, pellet mills, industrial equipment, high quality, custom manufacturing, wear resistance, pellet production, granulation, extrusion"
     }
   },
+  "granulator": "Granulator",
   "firstTitle": "Pellet",
   "secondTitle": "Press",
   "rollerShell": "ROLLER SHELL",
