--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -38,6 +38,7 @@
       "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, матрицы, обечайки, запасные части, грануляторы, промышленное оборудование, высокое качество, индивидуальное изготовление, износостойкость, производство гранул, грануляция, экструзия"
     }
   },
+  "granulator": "Гранулятор",
   "firstTitle": "Пресс",
   "secondTitle": "Гранулятор",
   "rollerShell": "Обечайка",
